:bug: fix: webkit-scrollbar

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -129,10 +129,16 @@ body {
     color: #a1a1aa !important;
   }
 }
+
 .reset-label__default {
   .van-field__label{
     color: var(--van-field-label-color) !important;
   }
 }
+
+// 解决部分安卓手机出现滚动条（已知机型：小米手机）
+.van-field__control::-webkit-scrollbar {
+  display: none; 
+  }
 
 
